--- a/hrm/views/layouts/main.handlebars
+++ b/hrm/views/layouts/main.handlebars
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/staff">Our Staff</a>
             </li>
+            <li class="nav-item">
+              <a href="/job-description" class="nav-link">Job Description</a>
+            </li>
           </ul>
           {{!-- <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -38,6 +41,10 @@
     </header>
 
     {{{body}}}
+
+    <footer class="bg-dark text-white py-3 text-center">
+      <p>E-HRM</p>
+    </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
