--- a/hrm/views/ourstaff.handlebars
+++ b/hrm/views/ourstaff.handlebars
@@ -16,17 +16,20 @@
       </tr>
     </thead>
     <tbody>
+      {{#each data}}
       <tr>
-        <td contenteditable="true">1</td>
-        <td contenteditable="true">413</td>
-        <td contenteditable="true">fasdfsadfsadf</td>
-        <td contenteditable="true">fasdfsadfsadf</td>
+        <td>{{_id}}</td>
+        <td>{{name}}</td>
+        <td>{{jobTitle}}</td>
+        <td>{{joiningDate}}</td>
         <td >
-          <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
-          <a href="/training-courses" class="btn btn-primary"><i class="fas fa-book"></i></a>
-          <a href="/performance" class="btn btn-success"><i class="fas fa-tachometer-alt"></i></a>
+          <a href="/delete/{{_id}}" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a>
+          <a href="/training-courses/{{_id}}" class="btn btn-primary"><i class="fas fa-book"></i></a>
+          <a href="/reviews/performance" class="btn btn-success"><i class="fas fa-tachometer-alt"></i></a>
+          <a href="/course/assign-course/{{_id}}" class="btn btn-dark">Add Course</a>
         </td>
       </tr>
+      {{/each}}
     </tbody>
   </table>
 </div>
