--- a/hrm/views/specificjobs.handlebars
+++ b/hrm/views/specificjobs.handlebars
@@ -11,16 +11,18 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td contenteditable="true">1</td>
-      <td contenteditable="true">413</td>
-      <td contenteditable="true">fasdfsadfsadf</td>
-      <td contenteditable="true">fasdfsadfsadf</td>
+    {{#each data}}
+      <tr>
+      <td>{{_id}}</td>
+      <td>{{name}}</td>
+      <td>{{jobTitle}}</td>
+      <td>{{joiningDate}}</td>
       <td >
-        <a href="/performance" class="btn btn-success"><i class="fas fa-tachometer-alt"></i></a>
+        <a href="/reviews/performance" class="btn btn-success"><i class="fas fa-tachometer-alt"></i></a>
         <a href="/training-courses" class="btn btn-primary"><i class="fas fa-book"></i></a>
       </td>
     </tr>
+    {{/each}}
   </tbody>
 </table>
 
