--- a/hrm/views/index.handlebars
+++ b/hrm/views/index.handlebars
@@ -27,7 +27,7 @@
           <a href="/delete/{{_id}}" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a>
           <a href="/specific-jobs/{{jobTitle}}" class="btn btn-primary"><i class="fas fa-user"></i></a>
           <a href="/update-employee/{{_id}}" class="btn btn-secondary"><i class="fas fa-edit"></i></a>
-          <a href="/job-desc/{{jobTitle}}" class="btn btn-secondary"><i class="fas fa-file-invoice"></i></a>
+          <a href="/job-description/{{jobTitle}}" class="btn btn-secondary"><i class="fas fa-file-invoice"></i></a>
           <a href="/reviews/give-review/{{_id}}" class="btn btn-dark">Give Review</a>
           <a href="/feedback/give-feedback/{{_id}}" class="btn btn-success">Give feedback</a>
         </td>
