--- a/hrm/views/job-description.handlebars
+++ b/hrm/views/job-description.handlebars
@@ -48,7 +48,7 @@
           <div class="col-md-6">
             <div class="form-group">
               <label for="jobPurpose">Main Purpose of the job</label>
-              <textarea name="jobPurpose" id="jobPurpose" cols="30" rows="10" class="form-control"></textarea>
+              <textarea name="jobPurpose" id="jobPurpose" cols="30" rows="5" class="form-control"></textarea>
             </div>
           </div>
         </div>
@@ -117,6 +117,113 @@
           </div>
         </div>
 
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="mainTaskRes">Main Tasks & Responsibilities</label>
+              <textarea name="mainTaskRes" id="mainTaskRes" cols="30" rows="5" class="form-control"></textarea>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="expectedPerformanceStd">Expected Performance Standard</label>
+              <textarea name="expectedPerformanceStd" id="expectedPerformanceStd" cols="30" rows="5" class="form-control"></textarea>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="additionalComments">Additional Comments</label>
+              <textarea name="additionalComments" id="additionalComments" cols="30" rows="5" class="form-control"></textarea>
+            </div>
+          </div>
+        </div>
+        <h1 class="text-center my-3">Created/Amended By</h1>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="authorname">Author's Name</label>
+              <input type="text" class="form-control" id="authorname" name="authorname">
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="authorSignature">Author's Signature</label>
+              <input type="text" class="form-control" id="authorSignature" name="authorSignature">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="date">Date</label>
+              <input type="date" class="form-control" name="date">
+            </div>
+          </div>
+        </div>
+
+        <h1 class="text-center my-3">Reviewed and Edited by HoD</h1>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="hAuthorName">Auther's Name</label>
+              <input type="text" class="form-control" name="hAuthorName">
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="hAuthorSignature">Auther's Signature</label>
+              <input type="text" class="form-control" name="hAuthorSignature">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="hdate">Date</label>
+              <input type="date" class="form-control" id="hdate" name="hdate">
+            </div>
+          </div>
+        </div>
+
+        <h1 class="text-center my-3">Discussed with jobholder and Accepted</h1>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="jAuthorName">Author's Name</label>
+              <input type="text" class="form-control" name="jAuthorName">
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="jAuthorSignature">Author's Signature</label>
+              <input type="text" class="form-control" name="jAuthorSignature">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="jdate">Date</label>
+              <input type="date" class="form-control" name="jdate">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-4 offset-md-4">
+            <button class="btn btn-primary btn-block">Submit</button>
+          </div>
+        </div>
       </form>
     </div>
   </div>
