--- a/hrm/views/specificjobs.handlebars
+++ b/hrm/views/specificjobs.handlebars
@@ -19,7 +19,7 @@
       <td>{{joiningDate}}</td>
       <td >
         <a href="/reviews/performance" class="btn btn-success"><i class="fas fa-tachometer-alt"></i></a>
-        <a href="/training-courses" class="btn btn-primary"><i class="fas fa-book"></i></a>
+        <a href="/training-courses/{{_id}}" class="btn btn-primary"><i class="fas fa-book"></i></a>
       </td>
     </tr>
     {{/each}}
